# livePusher

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/live/: LivePusher.java  MainActivity.java
app/src/main/java/com/live/media/: CameraHelper.java  VideoChannel.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
